# observathor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NEXT_STEPS.md  README.md  filestore_test_output.ndjson
apps/: observathor_cli.cpp  observathor_imgui.cpp  observathor_imgui_stub.cpp
include/observathor/core/http/: ChunkedDecoder.h  HostUtil.h  HttpParser.h
include/observathor/core/net/: IoContext.h  Socket.h  UpstreamConnector.h
include/observathor/core/proxy/: BodyCapture.h  ClientSession.h  Config.h  MitmPolicy.h  ProxyServer.h  SessionSerialization.h  TempFileManager.h  Transaction.h  TransactionDispatcher.h  TransactionFileStore.h  TransactionLogObserver.h  TransactionMemoryStore.h  TransactionRingBufferObserver.h
include/observathor/core/tls/: TlsContext.h
include/observathor/core/util/: Logger.h
scripts/: run-observathor.ps1  test_mitm.ps1
src/core/http/: ChunkedDecoder.cpp  HostUtil.cpp  HttpParser.cpp
src/core/net/: IoContext.cpp  Socket.cpp  UpstreamConnector.cpp
src/core/proxy/: CaptureGlobals.cpp  ClientSession.cpp  ProxyServer.cpp  SessionSerialization.cpp  TransactionDispatcher.cpp  TransactionFileStore.cpp  TransactionLogObserver.cpp  TransactionMemoryStore.cpp
src/core/tls/: TlsContext.cpp
src/core/util/: Logger.cpp
tests/: chunked_decoder_test.cpp  chunked_test.cpp  filestore_test.cpp  smoke_test.cpp  store_test.cpp  tls_context_test.cpp
